Fix logo wrap on smaller screens

--- a/docs/css/common.css
+++ b/docs/css/common.css
@@ -657,7 +657,7 @@ main {
 }
 
 .recap-site-header .recap-logo {
-  height: clamp(11rem, 15vw, 25rem)
+  height: clamp(15rem, 15vw, 25rem)
 }
 
 .recap-agenda-annonce a {
@@ -723,7 +723,7 @@ main {
   border-color: var(--brand-color);
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1100px) {
   .recap-site-header .recap-wrap {
     flex-direction: row-reverse;
   }
@@ -858,9 +858,9 @@ main {
 @media (max-width: 825px) {
   .clock-container {
     display: none;
-    flex-direction: column;
+    /*flex-direction: column;
     padding-top: 40px;
-    padding-bottom: 40px;
+    padding-bottom: 40px;*/
   }
 
   .clock-col+.clock-col {
